--- a/src/app/aaacesa/dialogs/dialog-create-previos.component.html
+++ b/src/app/aaacesa/dialogs/dialog-create-previos.component.html
@@ -71,7 +71,7 @@
         <div class="container mt-3">
           <form [formGroup]="secondFormGroup">
         
-              <!-- <div class="row justify-content-center mb-1">                     
+              <div class="row justify-content-start mb-1">                     
                 <div class="col-12 col-sm-6 col-md-6 col-lg-2 col-xl-2">  
                   <mat-form-field class="input-full-width">
                     <input matInput type="text" formControlName="piezasCtrl" maxlength="7" placeholder="Piezas"/>
@@ -109,7 +109,7 @@
                   <mat-form-field style="width: 49%;" >
                     <input matInput type="number" formControlName="horaPrevioCtrl" style="text-align:center;" min="0" max="23" placeholder="Hrs" />
                   </mat-form-field>
-                  <strong style="font-size:.5rem;">:</strong>
+                  <strong style="font-size:.3rem;">:</strong>
                   <mat-form-field style="width: 49%;">
                     <input matInput type="number" formControlName="minutoPrevioCtrl" style="text-align:center;" min="0" max="59"  placeholder="Mins" />
                   </mat-form-field>
@@ -118,11 +118,11 @@
                 <div class="col-12 col-sm-6 col-md-6 col-lg-3 col-xl-3">                                             
                   <mat-slide-toggle formControlName="etiquetadoCtrl" color="primary">Etiquetado</mat-slide-toggle>                  
                 </div>                               
-              </div>    -->
+              </div>   
                             
               <!--  -->              
         
-              <div class="row mb-1">                     
+              <!-- <div class="row mb-1">                     
                 <div class="col-lg-4">  
                   <mat-form-field class="input-full-width">
                     <input matInput type="text" formControlName="piezasCtrl" maxlength="7" placeholder="Piezas"/>
@@ -171,7 +171,7 @@
                     <input matInput type="number" formControlName="minutoPrevioCtrl" style="text-align:center;" min="0" max="59"  placeholder="Mins" />
                   </mat-form-field>
                 </div>                                       
-              </div>
+              </div> -->
 
               <!--  -->
               
