Ajustes en Finanzas
Ajustes en Finanzas

--- a/src/app/aaacesa/finanzas/finanzas.component.html
+++ b/src/app/aaacesa/finanzas/finanzas.component.html
@@ -308,7 +308,7 @@
               </div>
             </div>
 
-            <div class="col-lg-4">
+            <div class="col-lg-4 " *ngIf="resum">
               <mat-card class="resumen">
                 <mat-card-header><mat-card-subtitle><b>Resumen</b></mat-card-subtitle></mat-card-header>
                   <div class="row">
@@ -323,25 +323,25 @@
                       <div class="row">
                         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
                           <div >
-                            <small class="info-box-text" style="font-size:12px; padding: 5px 5px 5px 5px">Total Cartera</small>
+                            <small class="info-box-text" style="font-size:12px; padding: 5px 5px 5px 5px">Total Cartera:</small>
                           </div>
                           <div>
-                              <small class="info-box-text" style="font-size:12px; padding: 5px 5px 5px 5px">Total Vencido</small>
+                              <small class="info-box-text" style="font-size:12px; padding: 5px 5px 5px 5px">Total Vencido:</small>
                             </div>
                           <div>
-                            <small class="info-box-text" style="font-size:12px; padding: 5px 5px 5px 5px">Total Corriente</small>
+                            <small class="info-box-text" style="font-size:12px; padding: 5px 5px 5px 5px">Total Corriente:</small>
                           </div>
 
                         </div>
-                        <div  class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
-                            <div >
-                                <small class="info-box-text" style="font-size:12px; padding: 5px 5px 5px 5px">1,154,000</small>
+                        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6" >
+                            <div>
+                                <small class="info-box-text" style="font-size:12px; padding: 5px 5px 5px 5px">${{tmpcta.TotalCartera}}</small>
                               </div>
                               <div>
-                                  <small class="info-box-text" style="font-size:12px; padding: 5px 5px 5px 5px">45,219</small>
+                                  <small class="info-box-text" style="font-size:12px; padding: 5px 5px 5px 5px">${{tmpcta.TotalVencido}}</small>
                                 </div>
                               <div>
-                                <small class="info-box-text" style="font-size:12px; padding: 5px 5px 5px 5px">1,199,219</small>
+                                <small class="info-box-text" style="font-size:12px; padding: 5px 5px 5px 5px">${{tmpcta.TotalCorriente}}</small>
                               </div>
                         </div>
                         </div>
