--- a/src/app/aaacesa/salidas/salidas.component.html
+++ b/src/app/aaacesa/salidas/salidas.component.html
@@ -16,13 +16,13 @@
           <div class="row">
             <div class="col-lg-3 mb-1">
               <mat-form-field class="input-full-width">
-                <input matInput type="text" [(ngModel)]="busquedaModel.Master" [textMask]="{mask: masterMask, guide: false, modelClean: true}" placeholder="Guia Master"/>
+                <input matInput type="text" [(ngModel)]="busquedaModel.Master" [textMask]="{mask: masterMask, guide: false, modelClean: true}" placeholder="Guía Master"/>
               </mat-form-field>
             </div>
 
             <div class="col-lg-3 mb-1">
               <mat-form-field class="input-full-width">
-                <input matInput type="text" [(ngModel)]="busquedaModel.House" placeholder="Guia House"/>
+                <input matInput type="text" [(ngModel)]="busquedaModel.House" placeholder="Guía House"/>
               </mat-form-field>
             </div>
 
