--- a/src/app/aaacesa/dialogs/dialog-create-prealertas.component.html
+++ b/src/app/aaacesa/dialogs/dialog-create-prealertas.component.html
@@ -336,7 +336,7 @@
           </div>
           <div class="col-6 col-sm-6 col-md-4 col-lg-2 col-xl-2">
               <div class="detail-text font-weight-bold">Referencia</div>
-              <p class="detail-text">{{model.Referencia }}</p>
+              <p class="detail-text" style="word-break: break-all;">{{model.Referencia }}</p>
           </div>
           <div class="col-6 col-sm-6 col-md-4 col-lg-2 col-xl-2">
             <div class="detail-text font-weight-bold">Piezas </div>
