--- a/src/app/aaacesa/dialogs/dialog-create-previos.component.html
+++ b/src/app/aaacesa/dialogs/dialog-create-previos.component.html
@@ -330,7 +330,7 @@
           </div>
           <div class="col-6 col-sm-6 col-md-4 col-lg-2 col-xl-3">
             <div class="detail-text font-weight-bold">Referencia</div>
-            <p class="detail-text">{{referencia  }}</p>
+            <p class="detail-text" style="word-break: break-all;">{{referencia  }}</p>
           </div>
           <div class="col-6 col-sm-6 col-md-4 col-lg-2 col-xl-2">
             <div class="detail-text font-weight-bold">Piezas </div>
