--- a/src/app/aaacesa/dialogs/dialog-create-salida.component.html
+++ b/src/app/aaacesa/dialogs/dialog-create-salida.component.html
@@ -213,7 +213,7 @@
           </div>
           <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3">
             <div class="detail-text font-weight-bold">Referencia</div>
-            <p class="detail-text">{{referencia  }}</p>
+            <p class="detail-text" style="word-break: break-all;">{{referencia}}</p>
           </div>
           <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3">
             <div class="detail-text font-weight-bold">Fecha Salida</div>
