--- a/src/app/aaacesa/previos/previos.component.html
+++ b/src/app/aaacesa/previos/previos.component.html
@@ -219,7 +219,7 @@
                             </div>
                             <div class="col-6 col-sm-6 col-md-6 col-lg-3 col-xl-3">
                                 <div class="detail-text font-weight-bold">Referencia</div>
-                                <p class="detail-text">{{detailData.Referencia }}</p>
+                                <p class="detail-text" style="word-break: break-all;">{{detailData.Referencia }}</p>
                             </div>
                             <div class="col-6 col-sm-6 col-md-6 col-lg-3 col-xl-3">
                               <div class="detail-text font-weight-bold">Estatus</div>
