--- a/src/app/aaacesa/salidas/salidas.component.html
+++ b/src/app/aaacesa/salidas/salidas.component.html
@@ -215,7 +215,7 @@
                           </div>
                           <div class="col-6 col-sm-6 col-md-6 col-lg-6 col-xl-3">
                               <div class="detail-text font-weight-bold">Referencia</div>
-                              <p class="detail-text">{{detailData.Referencia }}</p>
+                              <p class="detail-text" style="word-break: break-all;">{{detailData.Referencia }}</p>
                           </div>
                           <div class="col-6 col-sm-6 col-md-6 col-lg-6 col-xl-3">
                             <div class="detail-text font-weight-bold">Estatus</div>
