--- a/src/app/views/dashboard/dashboard.component.scss
+++ b/src/app/views/dashboard/dashboard.component.scss
@@ -37,6 +37,9 @@ img {
     .info-box-text {
       text-align: center;
     }
+    .divisas{
+      display: none;
+    }
 }
 
 @media(max-width:920px){
