--- a/src/app/containers/default-layout/default-layout.component.html
+++ b/src/app/containers/default-layout/default-layout.component.html
@@ -124,7 +124,7 @@
       <!-- Grid column -->
       <hr class="clearfix w-100 d-md-none">
       <!-- Grid column -->
-      <div class="col-md-3">
+      <div class="col-md-2">
         <h6><strong>Correos</strong></h6>
         <ul class="dash" style="line-height: 0.65rem;" >
           <li><a class="link-footer" href="mailto:clientes@aaacesa.com.mx">clientes@aaacesa.com.mx</a></li>
@@ -133,6 +133,12 @@
           <li><a class="link-footer" href="mailto:juridico@aaacesa.com.mx">juridico@aaacesa.com.mx</a></li>
           <li><a class="link-footer" href="mailto:credito@aaacesa.com.mx">credito@aaacesa.com.mx</a></li>
         </ul>
+      </div>
+      <!-- Grid column -->
+      <!-- Grid column -->
+      <hr class="clearfix w-100 d-md-none">
+      <!-- Grid column -->
+      <div class="col-md-2 mt-3">
         <div class="text-center">
           <ul class="list-unstyled list-inline">
             <li class="list-inline-item">
@@ -141,7 +147,7 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a class="btn-floating btn-sm link-footer mx-1" href="twitter.com/AAACESA_AF">
+              <a class="btn-floating btn-sm link-footer mx-1" href="https:///www.twitter.com/AAACESA_AF">
                 <i class="icon-social-twitter"></i>
               </a>
             </li>
@@ -153,7 +159,6 @@
           </ul>
         </div>
       </div>
-      <!-- Grid column -->
     </div>
     <!-- Grid row -->
   </div>
