--- a/src/app/aaacesa/calculadora/calculadora.component.html
+++ b/src/app/aaacesa/calculadora/calculadora.component.html
@@ -181,6 +181,6 @@
 </div>
 <div class="row mb-2 mt-0">
     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" style="font-size: 0.7rem; font-weight: bold; float:left;" >
-      * Este simulador, no es la cotización final, sujeto a cambio.
+      * Este simulador no es la cotización final, sujeto a cambio.
     </div>
   </div><!-- end ROW -->
