--- a/src/app/views/dashboard/dashboard.component.html
+++ b/src/app/views/dashboard/dashboard.component.html
@@ -114,7 +114,7 @@
             <div class="row">
               
               <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4" style="padding-right:0;">
-                <a href="http://t21.com.mx/"><img class="img-fluid" src="assets/img/portada(2).jpg" alt="Imagen card"
+                <a href="http://t21.com.mx/"><img class="img-fluid" src="assets/img/t212.jpg" alt="Imagen card"
                     style="height:155px;" /></a>              
                 
                 <small style="font-size:10px; font-weight:bold; text-align: center;">Tipo Cambio</small>
@@ -139,7 +139,7 @@
               <div class="col-xs-8 col-sm-8 col-md-8 col-lg-8 col-xl-8">
                 <div>
                   <a href="https://www.aicm.com.mx/"><img class="airport img-fluid"
-                      src="https://casetasdemexico.com.mx/wp-content/uploads/2016/02/AEROPUERTO.jpg"
+                      src="assets/img/aicm.jpg"
                       alt="Imagen Aeropuerto" style="height: 155px"></a>
                 </div>
 
