--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -1,4 +1,4 @@
-<ngx-loading [show]="loading"></ngx-loading>
+<!-- <ngx-loading [show]="loading"></ngx-loading>
 <div class="app-body">
   <main class="main d-flex align-items-center">
     <div class="container">
@@ -96,6 +96,117 @@
                   </div>
               </div>
             </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </main>
+</div> -->
+<!-- /////////////////////// test login //////////////////////////////////////////////////// -->
+<ngx-loading [show]="loading"></ngx-loading>
+<div class="app-body" style="background: linear-gradient(180deg, rgba(249,249,249,1) 0%, rgba(24,68,133,1) 46%, rgba(19,21,41,1) 100%);">
+  <main class="main d-flex align-items-center">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-5 mx-auto">
+          <div class="card-group">
+            <div class="card p-4">
+              <div class="row">
+                <div class="col text-center">
+                  <img src="/assets/img/brand/logo_aaa.png" class="img-fluid" alt="AACESA">
+                  <br>
+                </div>
+              </div>
+              <div class="card-body" [hidden]="getPasword">
+                <form #loginForm="ngForm">
+                  <h4 class="text-center">Portal de Servicios</h4>
+                  <p class="text-muted text-center">Inicio de Sesión</p>
+                  <div class="row mt-2">
+                    <div class="col-md-12">
+                      <mat-form-field class="input-full-width">
+                        <mat-label>Nombre de usuario</mat-label>
+                        <input type="text" matInput  [(ngModel)]="email" maxlength="40" #emailUser="ngModel" id="emailUser" name="emailUser" required pattern="^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,6})+$">
+                        <span matPrefix><i class="icon-user info"></i> &nbsp;</span>
+                        <mat-error *ngIf="emailUser.dirty || emailUser.pristine || emailUser.errors?.required">
+                          * Nombre de usuario incorrecto
+                        </mat-error>
+                      </mat-form-field> 
+                    </div>
+                  </div>
+                  <div class="row mt-3">
+                    <div class="col-md-12">
+                      <mat-form-field class="input-full-width">
+                        <mat-label>Contraseña</mat-label>
+                        <input [type]="hide ? 'password' : 'text'" matInput maxlength="40"  [(ngModel)]="password" #passwordUser="ngModel" id="passwordUser" name="passwordUser" required>
+                        <mat-error *ngIf="passwordUser.dirty || passwordUser.pristine ||passwordUser.hasError('required')">
+                            * Contraseña no valida
+                        </mat-error>
+                      </mat-form-field> 
+                    </div>
+                  </div>
+                  <div class="row mt-3">
+                    <div class="col-md-12">
+                      <mat-checkbox color="primary" [(ngModel)]="checked" #checkedU=ngModel id="checkedU" name="checkedU" required>&nbsp; Acepto las <a href="http://www.aaacesa.com.mx/" class="link" target="_blank"> Condiciones de uso</a></mat-checkbox>                     
+                      <div class="mat-form-field-subscript-wrapper mat-error mt-3" *ngIf="!checked || checkedU.hasError('required')">
+                        * Es necesario Aceptar las <strong>condiciones de uso</strong>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="row mt-4">
+                    <div class="col-6">
+                      <button type="submit"  class="btn btn-ghost-links btn-pill" (click)="loginForm.valid ? login() : validar_campos(loginForm)"><i class="fas fa-unlock"></i>&nbsp;Entrar</button>
+                    </div>
+                    <div class="col-6 text-right">
+                      <button type="button" class="btn btn-link btn-sm" (click)="onRecoveryPassword()" >¿Olvidaste tu contraseña?</button>
+                    </div>
+                  </div>
+                </form>
+              </div>
+              <div class="card-body" [hidden]="!getPasword">
+                <form #resetForm="ngForm">
+                  <h5 class="text-center">Recupera tu contraseña</h5>
+                    <p class="text-muted text-center">Ingresa el correo registrado en tu cuenta</p>
+                    <div class="row mt-2">
+                      <div class="col-md-12">
+                        <mat-form-field class="input-full-width">
+                          <mat-label>Nombre de usuario</mat-label>
+                          <input type="text" matInput  [(ngModel)]="recuperaEmail" maxlength="40" #recuEmail="ngModel" id="recuEmail" name="recuEmail" required pattern="^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,6})+$">
+                          <span matPrefix><i class="icon-user info"></i> &nbsp;</span>
+                          <mat-error *ngIf="recuEmail.dirty || recuEmail.pristine || recuEmail.errors?.required">
+                              * Nombre de usuario incorrecto
+                          </mat-error>
+                        </mat-form-field>
+                      </div>
+                    </div>
+                    <div class="row mt-3">
+                      <div class="col-6">
+                        <a href="/login" class="btn btn-link btn-small"><i class="icon-action-undo"></i>&nbsp;Regresar</a>
+                      </div>
+                      <div class="col-6">
+                        <button type="submit"  class="btn btn-ghost-links btn-pill" (click)="resetForm.valid ? resetPassword() : validar_campos(resetForm)"><i class="icon-paper-plane"></i>&nbsp;Enviar</button>
+                      </div>
+                    </div>
+                    <div class="row">
+                    <div class="col-12 text-center">
+                        
+                        <div *ngIf="validar">
+                           {{message}}
+                        </div>
+                        
+                    </div>
+                  </div>
+                </form>
+              </div>
+            </div>
+            <!-- <div class="card text-white bg-primary py-5 d-md-down-none" style="width:44%">
+              <div class="card-body text-center">
+                  <div class="col align-self-center mt-5">
+                    <img src="/assets/img/brand/loggin.png" class="img-fluid" alt="AACESA">
+                    <br>
+                    <h4 class="mt-3">Bienvenido</h4>
+                  </div>
+              </div>
+            </div> -->
           </div>
         </div>
       </div>
