--- a/src/app/views/resetpassword/resetpassword.component.html
+++ b/src/app/views/resetpassword/resetpassword.component.html
@@ -1,11 +1,17 @@
 <ngx-loading [show]="loading"></ngx-loading>
-<div class="app-body">
+<div class="app-body" style="background: linear-gradient(180deg, rgba(249,249,249,1) 0%, rgba(24,68,133,1) 46%, rgba(19,21,41,1) 100%);">
   <main class="main d-flex align-items-center">
     <div class="container">
       <div class="row">
-        <div class="col-md-8 mx-auto">
+        <div class="col-md-5 mx-auto">
           <div class="card-group">
             <div class="card p-4">
+              <div class="row">
+                <div class="col text-center">
+                  <img src="/assets/img/brand/logo_aaa.png" class="img-fluid" alt="AACESA">
+                  <br>
+                </div>
+              </div>
               <div class="card-body">
                 <form [formGroup]="form">
                   <h4>Cambiar contraseña</h4>
@@ -51,7 +57,7 @@
                 </form>
               </div>
             </div>
-            <div class="card text-white bg-primary py-5 d-md-down-none" style="width:44%">
+            <!-- <div class="card text-white bg-primary py-5 d-md-down-none" style="width:44%">
               <div class="card-body text-center">
                 <div class="col align-self-center mt-5">
                   <img src="/assets/img/brand/loggin.png" class="img-fluid" alt="AACESA">
@@ -59,7 +65,7 @@
                   <h4 class="mt-3">Bienvenido</h4>
                 </div>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
